--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "lint": "eslint --ext js ./sources",
+    "lint": "eslint --ext js ./sources ./tests",
     "watch": "npm-watch",
     "extra-dep": "dependency-check ./package.json --extra",
     "check-dependencies": "dependency-check ./package.json",
@@ -90,6 +90,7 @@
     "npm-watch": "0.3.0",
     "nyc": "11.2.1",
     "oss-license-name-to-url": "1.2.1",
+    "randomstring": "1.1.5",
     "read-yaml": "1.1.0",
     "remarkable": "1.7.1",
     "serve-here": "3.2.0",
