--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
   },
   "licenseDate": "2017-present",
   "devDependencies": {
-    "@alexistessier/es-lint-config": "1.7.0",
+    "@alexistessier/es-lint-config": "2.1.0",
     "@alexistessier/node-module-starterkit-release-dep": "1.7.4",
     "ava": "0.23.0",
     "capitalize": "1.0.0",
@@ -80,7 +80,7 @@
     "dashify": "0.2.2",
     "dependency-check": "2.9.1",
     "documentation": "5.3.3",
-    "eslint": "4.9.0",
+    "eslint": "4.11.0",
     "git-repo-info": "1.4.1",
     "github-markdown-css": "2.9.0",
     "glob": "7.1.2",
@@ -88,7 +88,7 @@
     "mkdirp": "0.5.1",
     "mustache": "2.3.0",
     "npm-watch": "0.3.0",
-    "nyc": "11.2.1",
+    "nyc": "11.3.0",
     "oss-license-name-to-url": "1.2.1",
     "randomstring": "1.1.5",
     "read-yaml": "1.1.0",
@@ -113,5 +113,8 @@
   },
   "optionalDependencies": {
     "ttab": "0.6.0"
+  },
+  "dependencies": {
+    "@alexistessier/msg": "1.1.0"
   }
 }
