work in progress

--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "@alexistessier/node-module-starterkit-release-dep": "1.7.4",
     "ava": "0.23.0",
     "capitalize": "1.0.0",
-    "concurrently": "3.5.0",
+    "concurrently": "3.5.1",
     "coveralls": "3.0.0",
     "dashify": "0.2.2",
     "dependency-check": "2.9.1",
@@ -115,6 +115,7 @@
     "ttab": "0.6.0"
   },
   "dependencies": {
-    "@alexistessier/msg": "1.1.0"
+    "@alexistessier/msg": "1.1.0",
+    "escape-quotes": "1.0.2"
   }
 }
