--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "watch": "npm-watch",
     "extra-dep": "dependency-check ./package.json --extra",
     "check-dependencies": "dependency-check ./package.json",
+    "install-multivers": "nvm install 8.5.0 && nvm install 6.9.1",
+    "test-multivers": "nvm use 8.5.0 && npm test && nvm use 6.9.1 && npm test",
     "test": "npm run lint && npm run check-dependencies && npm run coverage",
     "watch-test": "ava --watch --timeout=$npm_package_ava_timeout",
     "coverage": "nyc ava --timeout=$npm_package_ava_timeout && npm run report",
