--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
   },
   "dependencies": {
     "@alexistessier/msg": "1.1.0",
-    "escape-quotes": "1.0.2"
+    "escape-quotes": "1.0.2",
+    "global": "4.3.2"
   }
 }
