--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
   "licenseDate": "2017-present",
   "devDependencies": {
     "@alexistessier/es-lint-config": "2.1.0",
-    "@alexistessier/node-module-starterkit-release-dep": "1.9.0",
+    "@alexistessier/node-module-starterkit-release-dep": "1.9.2",
+    "@vivaxy/here": "3.2.2",
     "ava": "0.25.0",
     "capitalize": "1.0.0",
     "concurrently": "3.5.1",
@@ -97,7 +98,6 @@
     "randomstring": "1.1.5",
     "read-yaml": "1.1.0",
     "remarkable": "1.7.1",
-    "serve-here": "3.2.0",
     "shelljs": "0.8.1"
   },
   "ava": {
@@ -119,7 +119,7 @@
     "ttab": "0.6.0"
   },
   "dependencies": {
-    "@alexistessier/msg": "1.1.6",
+    "@alexistessier/msg": "1.1.8",
     "escape-quotes": "1.0.2",
     "global": "4.3.2",
     "repeat-string": "1.6.1"
